<resources>
    <string name="app_name">Bei Recipes</string>
    <string name="file_authority">com.dmtaiwan.alexander.beirecipes.fileprovider</string>

    <!--RecipeActivity-->
    <string name="edit_text_quantity">Quantity</string>
    <string name="text_view_ingredient_name">Name</string>
    <string name="text_view_ingredient_count">Count</string>
    <string name="text_view_ingredient_unit">Unit</string>
    <string name="text_view_ingredient_fraction">Fraction</string>
    <string name="text_view_ingredient_proportion">Prop. Count</string>
    <string name="button_ok">OK</string>
    <string name="recipe_activity_empty_view">Add an ingredient!</string>
    <string name="recipe_activity_empty_view_direction">Add an direction!</string>

    <!--RecipeActivity Menu-->
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!--EditRecipe Activity-->
    <string name="text_view_recipe_edit_title">Title</string>
    <string name="hint_recipe_edit_title_hint">Enter Title</string>
    <string name="text_view_recipe_edit_ingredients_title">Ingredients</string>
    <string name="button_recipe_edit_add_ingredient">Add Ingredient</string>
    <string name="button_recipe_edit_add_image">Add an Image</string>
    <string name="button_recipe_edit_save">Save</string>
    <string name="button_recipe_edit_up_arrow">↑</string>

    <!--Ingredient Dialog-->
    <string name="hint_dialog_ingredient_quantity">Qty.</string>
    <string name="hint_dialog_ingredient_name">Ingredient Name</string>
    <string name="button_dialog_add">Add</string>
    <string name="button_dialog_ok">OK</string>
    <string name="button_dialog_cancel">Cancel</string>
    <string name="button_dialog_remove">Remove</string>
    <string name="button_dialog_update">Update</string>
    <string name="error_dialog_enter_name">Please enter an ingredient</string>

    <!--Delete AlertDialog-->
    <string name="dialog_confirm">Are you sure?</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>

    <string-array name="dialog_spinner_units">
        <item>Units</item>
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>mL</item>
        <item>L</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>cup</item>
        <item>piece</item>
        <item>box</item>
        <item>stick</item>
        <item>(to taste)</item>
    </string-array>

    <string-array name="dialog_spinner_fractions">
        <item>Fraction</item>
        <item>⅛</item>
        <item>¼</item>
        <item>⅓</item>
        <item>½</item>
        <item>⅔</item>
        <item>¾</item>
    </string-array>

    <!--Permissions-->
    <string name="permission_rationale">Permissions are needed to write to external storage</string>
    <string name="permission_ok">OK</string>
</resources>
