<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- activity view -->
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:theme="@style/DarkOverlay"
                >

                <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
                    style="@style/TextAppearance.GridPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_recipe_edit_title"
                    />

                <com.dmtaiwan.alexander.beirecipes.ui.views.FontEditText
                    android:id="@+id/edit_text_title"
                    style="@style/TextAppearance.GeneralText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_view_margin_top"
                    android:background="@android:color/white"
                    android:hint="@string/hint_recipe_edit_title_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:padding="@dimen/edit_text_padding"
                    android:singleLine="true"
                    android:textColorHint="@color/app_compat_light_hint"
                    android:theme="@style/BeiRecipe"/>

                <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
                    style="@style/TextAppearance.GridPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_view_margin_top"
                    android:text="@string/text_view_recipe_edit_ingredients_title"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/recycler_margin_top"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/button_add_ingredient"
                    style="@style/TextAppearance.GeneralText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:background="@drawable/custom_button"
                    android:text="@string/button_recipe_edit_add_ingredient"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/button_add_image"
                    style="@style/TextAppearance.GeneralText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:background="@drawable/custom_button"
                    android:text="@string/button_recipe_edit_add_image"
                    android:textColor="@android:color/white"/>


                <Button
                    android:id="@+id/button_save"
                    style="@style/TextAppearance.GeneralText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin_bottom"
                    android:background="@drawable/custom_button"
                    android:text="@string/button_recipe_edit_save"
                    android:textColor="@android:color/white"/>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>